--- a/.pylintrc
+++ b/.pylintrc
@@ -15,7 +15,7 @@ ignore-patterns=
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-init-hook='sys.path = list(); sys.path.append("/Users/jyh/jason@karyk.com/ColabNotebooks/Public/goes_truecolor")
+#init-hook="from pylint.config import find_pylintrc; import os, sys; sys.path.append(os.path.dirname(find_pylintrc())); print(sys.path)"
 
 # Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
 # number of processors available to use.
