--- a/appengine/app.yaml
+++ b/appengine/app.yaml
@@ -1,37 +1,15 @@
-runtime: python27
-api_version: 1
-threadsafe: true
-
-libraries:
-- name: webapp2
-  version: latest
-- name: jinja2
-  version: latest
-- name: pytz
-  version: latest
-- name: ssl
-  version: latest
-- name: PIL
-  version: 1.1.7
-- name: numpy
-  version: 1.6.1
+runtime: python37
 
 handlers:
 - url: /
-  script: main.application
+  script: auto
 
 - url: /cloud_masks/(.*\.(gif|jpg))
-  script: main.application
-
-- url: /static
-  static_dir: static
+  script: auto
 
 - url: /favicon.ico
   static_files: favicon.png
   upload: favicon.png
-
-- url: /.*\.(html)$
-  script: main.application
 
 - url: /(.*\.(css|js|png|gif|jpg|xml|svg|xml))$
   static_files: contents/\1
